<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_drink_place"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <EditText
                android:textColor="#ffff"
                android:id="@+id/new_entry_visit_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <RadioGroup
                android:id="@+id/new_entry_maintenace_city_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:textColor="#ffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_entry_maintenance_drinking_coffee" />

                <RadioButton
                    android:textColor="#ffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/new_entry_maintenance_drinking_coffee2" />

                <RadioButton
                    android:textColor="#ffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/new_entry_maintenance_drinking_coffee3" />

            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_coffee_type"
                android:layout_marginTop="50dp"
                android:textColor="@color/colorText"
                android:textSize="20dp" />


            <CheckBox
                android:textColor="#ffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/new_entry_coffee_type1" />

            <CheckBox
                android:textColor="#ffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_coffee_type2" />

            <CheckBox
                android:textColor="#ffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_coffee_type3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_maintenance_payment_type"
                android:layout_marginTop="50dp"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/colorAccent"
                android:text="@string/new_entry_button" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>